--- a/S03.02-Exercise-RecyclerViewClickHandling/app/src/main/res/layout/forecast_list_item.xml
+++ b/S03.02-Exercise-RecyclerViewClickHandling/app/src/main/res/layout/forecast_list_item.xml
@@ -23,7 +23,7 @@
     <TextView
         android:id="@+id/tv_weather_data"
         style="@style/TextAppearance.AppCompat.Large"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"/>
 
